welcome.lessons.welcome.bat.bool1.Makes10.scala.error
makes10:2: error: missing arguments for method || in class Boolean;
follow this method with `_' if you want to treat it as a partially applied function
	if ( a==10 || a+b==10 || b=10 ) {
                              ^makes10:2: error: type mismatch;
 found   : Unit
 required: Boolean
	if ( a==10 || a+b==10 || b=10 ) {
        ^